--- a/src/main/resources/ProfileWindow.html
+++ b/src/main/resources/ProfileWindow.html
@@ -11,6 +11,6 @@
     <p>Number : $number</p>
     <p>School : $school</p>
     <p>Email : $email</p>
-    <img src="./src/main/resources/profile_picture/$room.jpg" alt="Profile Picture of $name" width="170" height="170">
+    <img src="$profileRoom.jpg" alt="Profile Picture of $name" width=auto height=auto>
 </body>
 </html>
